# dwc_pos

./: .gitignore  alembic.ini  pyproject.toml  run_dev.bat  seed_data.py
alembic/: env.py
alembic/versions/: 34938966f2cd_add_rbac_models_and_modify_user_model.py  66ef8b1a6c1d_add_uom_and_product_models.py  8b95525fb456_initial_database_setup_with_all_core_.py  c34e7165f1f9_create_initial_rbac_and_user_models.py  da1a5aefce1a_add_outlet_id_to_user_model.py
app/: main.py  seed_data.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  products.py  uoms.py  users.py
app/core/: config.py  security.py
app/db/: base.py  connection.py
app/models/: company.py  outlet.py  permission.py  product.py  role.py  role_permission.py  uom.py  user.py  user_role.py
app/schemas/: auth.py  company.py  product.py  token.py  uom.py  user.py
app/services/: email_service.py
